--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -126,17 +126,55 @@ p{width:198px; height: 48px;background:#ededed;text-align: center;
 span{color: red;}
 b{text-decoration:line-through;}}}
 //大货
-.b1shop{width: 1200px;margin: 0 auto;height: 440px;background: blue;margin-top: 45px;
-.b1shop1{width:200px;background: pink;height: 440px;}}
-
-
-
-
-
-
-
-
-
+.b1shop{width: 1200px;margin: 0 auto;height: 440x;margin-top: 45px;overflow: hidden;
+.b1shop1{width:194px;background: #fff;height: 438px;border-bottom:1px solid #666 ;border-right: 1px solid #dcdcdc ;float: left;
+.b1shop1o{width: 194px;height: 92px;background:url(../homeimg/sy_lay_bg.jpg) 0 -709px no-repeat;}
+.b1shop1t{width: 194px;height: 222px;overflow: hidden;
+a{display: block;width: 194px;height: 45px;text-align: center;margin-top: 20px;}}
+ul{width: 194px;height: 126px;background: #666666;
+li{padding-left: 25px;
+a{margin-right: 10px;display: inline-block;width: 72px;height: 31px;font: 14px/31px  "微软雅黑";}}}}}
+.b1shop2{width: 1004px;height: 440px;float: left;}
+.b1shop2top{width:1004px;height: 230px;background: #fff;float: left;
+div{width: 181px;height: 218px;float: left;text-align: center;padding: 10px 10px 0 10px;border-bottom: 1px solid #dcdcdc;border-right:1px solid #dcdcdc ;border-top:1px solid #dcdcdc;font: 14px/31px  "微软雅黑";
+img{width: 165px;height: 165px;margin-top: 20px;}}
+p{width:600px;height: 220px;float: left;
+img{width:600px;height: 230px;}}}
+.b1shop2 ul{width:1004px;height: 210px;
+li{float: left;width: 200px;background: #fff;text-align: center;border-bottom: 1px solid #dcdcdc;border-right:1px solid #dcdcdc ;height: 210px;
+.b1tta{display: block;padding: 15px 10px 0 10px;}
+img{width: 165px;height: 165px;}
+p{font:14px/25px "微软雅黑";height: 26px;background: #dcdcdc;display: none;
+b{color: #000;}
+span{color: red;}}}} 
+.b1shop2 ul h3{height: 48px;background:#ededed;text-align: center;font: 400 14px/1 "微软雅黑";position: absolute;bottom: -26px;
+a{height: 24px;color: #333333;font: 14px/24px "微软雅黑";width: 200px;display: block;}
+span{color: red;}
+b{text-decoration:line-through;}}
+.b1shop2 ul div{position: relative;}
+//广告
+.adv{width: 1100px;height: 250px;margin: 40px auto;
+img{width: 1100px;height: 250px;}}
+//广告下
+.advb{width: 100%;background: red;
+.advbt{width: 1200px;margin: 0 auto;padding: 24px 0;overflow: hidden;
+.advbt1{width: 64px;padding: 0 50px;height: 150px;border-right:1px solid #cdcdcd ;float: left;
+dt{font: 16px/33px "宋体";height: 30px;}
+dd{font: 12px/25px "宋体";height: 22px;background: url(../homeimg/rsaquo.png)left center no-repeat;padding-left: 10px;}}}}
+.advbt2{width: 96px;padding: 0 50px;height: 150px;border-right:1px solid #cdcdcd ;float: left;
+dt{font: 16px/33px "宋体";height: 30px;}
+dd{font: 12px/25px "宋体";height: 22px;background: url(../homeimg/rsaquo.png)left center no-repeat;padding-left: 10px;}}
+.advbt3{width: 176px;padding: 0 50px;height: 150px;border-right:1px solid #cdcdcd ;float: left;
+dt{font: 16px/33px "宋体";height: 30px;}
+dd{font: 12px/25px "宋体";height: 22px;background: url(../homeimg/rsaquo.png)left center no-repeat;padding-left: 10px;}}
+//底部
+.bottom{width: 1200px;height: 200px;margin: 0 auto;padding: 40px 0;
+.bottomul{font: 14px/1  "微软雅黑";height: 14px;margin: 10px auto;width: 600px;
+li{float: left;padding: 0 10px;border-right:1px solid #CDCDCD ;}}
+.bottomd{width: 656px;font: 14px/25px "微软雅黑";height: 25px;margin: 0 auto;}
+.bottomdiv{width: 400px;height:60px ;margin: 0 auto;margin-top: 40px;
+a{float: left;height:60px ;display: block;font: 14px/20px "微软雅黑";margin-left: 15px;
+p{height:50px ;width: 132px;float: right;margin-left: 10px;margin-top: 10px;}}}}
 
 
 
